# BiBtex-vala

./: LICENSE  README.md  meson.build  meson_options.txt
src/: BibTex.vala  meson.build
tests/: hello-bibtex.vala  meson.build  test.bib
